add isFavorite button.

--- a/app/src/main/res/layout/include_app_bar.xml
+++ b/app/src/main/res/layout/include_app_bar.xml
@@ -10,7 +10,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
-            app:navigationIcon="@drawable/ic_back"
+            app:navigationIcon="@drawable/btn_back"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
 </android.support.design.widget.AppBarLayout>
