--- a/app/src/main/res/layout/include_music_search_bar.xml
+++ b/app/src/main/res/layout/include_music_search_bar.xml
@@ -20,7 +20,7 @@
 
             android:contentDescription="@null"
             android:scaleType="centerInside"
-            android:src="@drawable/ic_back" />
+            android:src="@drawable/btn_back" />
 
         <EditText
             android:id="@+id/tv_local_music"
