--- a/app/src/main/res/layout/rv_music.xml
+++ b/app/src/main/res/layout/rv_music.xml
@@ -1,38 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="2dp">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/iv_favorite"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingStart="3dp"
-        app:srcCompat="@drawable/btn_not_favorite" />
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:padding="5dp"
+        android:layout_centerVertical="true"
+        android:background="@drawable/btn_my_favorite_selector"
+        tools:ignore="ContentDescription" />
 
     <TextView
-        android:id="@+id/item_song"
+        android:id="@+id/tv_song"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/iv_favorite"
+        android:layout_toRightOf="@+id/iv_favorite"
+        android:paddingStart="5dp"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:ignore="RelativeOverlap" />
 
     <TextView
-        android:id="@+id/item_singer"
+        android:id="@+id/tv_singer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/item_song"
+        android:layout_toRightOf="@+id/iv_favorite"
+        android:paddingStart="5dp"
+        android:layout_below="@+id/tv_song"
         android:textSize="13sp" />
 
     <ImageView
         android:id="@+id/iv_more"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
         android:layout_alignParentEnd="true"
-        app:srcCompat="@drawable/ic_more" />
+        android:layout_centerVertical="true"
+        app:srcCompat="@drawable/btn_more"
+        tools:ignore="ContentDescription" />
 
 </RelativeLayout>
