--- a/app/src/main/res/layout/fragment_local.xml
+++ b/app/src/main/res/layout/fragment_local.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp"
-    tools:context="com.nilin.etherealmuisc.fragment.LocalFragment">
+    tools:context="com.nilin.etherealmuisc.fragment.MainFragment">
 
     <Button
         android:id="@+id/bt_local_music"
