--- a/app/src/main/res/layout/rv_local_music.xml
+++ b/app/src/main/res/layout/rv_local_music.xml
@@ -6,18 +6,11 @@
     android:layout_height="wrap_content"
     android:padding="5dp">
 
-    <ImageView
-        android:id="@+id/iv_favorite"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:layout_centerVertical="true"
-        tools:ignore="ContentDescription" />
-
     <TextView
         android:id="@+id/tv_song"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/iv_favorite"
+        android:layout_alignParentStart="true"
         android:paddingStart="5dp"
         android:textColor="@color/black"
         android:textSize="16sp"
@@ -28,11 +21,10 @@
         android:id="@+id/tv_singer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/iv_favorite"
+        android:layout_alignParentStart="true"
         android:paddingStart="5dp"
         android:layout_below="@+id/tv_song"
         android:textSize="13sp" />
-
     <ImageView
         android:id="@+id/iv_more"
         android:layout_width="25dp"
