--- a/app/src/main/res/layout/fragment_search_music.xml
+++ b/app/src/main/res/layout/fragment_search_music.xml
@@ -24,7 +24,7 @@
     </android.support.design.widget.AppBarLayout>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_local_music"
+        android:id="@+id/rv_search_music"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="1dp" />
