--- a/app/src/main/res/layout/fragment_online.xml
+++ b/app/src/main/res/layout/fragment_online.xml
@@ -18,7 +18,7 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_online_music"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
